--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.3",
     "ejs": "^2.6.1",
+    "ejs-mate": "^3.0.0",
     "express": "^4.16.4",
     "express-formidable": "git+https://github.com/utatti/express-formidable.git",
     "express-session": "^1.15.6",
